# GonzalesTaxPlatform

./: .env.example  .gitignore  README.md  create_shortcut.ps1  pyproject.toml  requirements.txt
frontend/web/: convert-icon.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/web/src/: App.tsx  index.css  main.tsx
frontend/web/src/contexts/: AuthContext.tsx
frontend/web/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/web/src/pages/: Dashboard.tsx  Documents.tsx  Landing.tsx  Login.tsx  Optimizer.tsx  QuickCalc.tsx  Register.tsx  Splash.tsx  TaxCalculator.tsx  TaxReturn.tsx
frontend/web/src/services/: api.ts
frontend/web/src/store/: index.ts
src/: __init__.py
src/ai/: __init__.py  deduction_optimizer.py
src/api/: main.py
src/api/routers/: __init__.py  auth.py  calculations.py  documents.py  efile.py  mef.py  optimizer.py  returns.py  users.py
src/calculations/: __init__.py  tax_engine.py
src/compliance/: __init__.py  compliance_framework.py  state_authorization.py
src/core/: __init__.py  config.py
src/irs/: __init__.py  a2a_toolkit.py  ack_parser.py  form_schemas.py  mef_providers.py  mef_standards.py  security_compliance.py  xml_builder.py
src/models/: __init__.py  tax_return.py
src/services/: auth_service.py
